--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "test": "test"
   },
   "scripts": {
-    "watch": "node ./scripts/watch.js",
-    "build": "node ./scripts/build.js"
+    "watch": "npx spago build && node ./scripts/watch.js",
+    "build": "npx spago build && node ./scripts/build.js"
   },
   "devDependencies": {
     "esbuild": "^0.14.39",
