--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "spago": "^0.20.9"
   },
   "author": "yukikurage",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
   "type": "module"
 }
