--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "watch": "npx spago build && node ./scripts/watch.js",
-    "build": "npx spago build && node ./scripts/build.js"
+    "build": "npx spago build && node ./scripts/build.js",
+    "test": "npx spago test"
   },
   "devDependencies": {
     "esbuild": "^0.14.39",
