--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "devDependencies": {
     "esbuild": "^0.14.39",
+    "pulp": "^16.0.2",
     "purescript": "^0.15.2",
+    "purs": "^0.3.0",
     "purs-tidy": "^0.9.0",
     "spago": "^0.20.9"
   },
