--- a/package.json
+++ b/package.json
@@ -25,15 +25,13 @@
     "purescript": "^0.15.4",
     "purs": "^0.3.0",
     "purs-tidy": "^0.9.1",
-    "spago": "^0.20.9"
+    "spago": "^0.20.9",
+    "esbuild": "^0.15.7",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^4.8.3"
   },
   "author": "yukikurage",
   "license": "MIT",
   "description": "",
-  "type": "module",
-  "dependencies": {
-    "esbuild": "^0.15.7",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^4.8.3"
-  }
+  "type": "module"
 }
