add ssg support

--- a/package.json
+++ b/package.json
@@ -9,13 +9,7 @@
     "watch-browser:tsc": "tsc -w --preserveWatchOutput",
     "watch-browser:spago": "npx spago bundle-app --main Test.EntryPoints.Browser --to public/index.js --watch",
     "watch-browser": "npm-run-all -p watch-browser:*",
-    "bundle-browser:tsc": "tsc",
-    "bundle-browser:spago": "npx spago bundle-app --main Test.EntryPoints.Browser --to public/index.js",
-    "bundle-browser": "npm-run-all bundle-browser:*",
-    "run-node:tsc": "tsc --preserveWatchOutput",
-    "run-node:spago": "npx spago run --main Test.EntryPoints.NodeJS",
-    "run-node": "npm-run-all run-node:*",
-    "bundle": "npm-run-all run-node bundle-browser",
+    "bundle": "npx spago run --main Test.Main",
     "precommit": "npx purs-tidy format-in-place src/**/*.purs test/**/*.purs && tsc && npx spago build",
     "prepare": "husky install"
   },
