--- a/package.json
+++ b/package.json
@@ -6,22 +6,19 @@
     "test": "test"
   },
   "scripts": {
-    "watch-browser:tsc": "tsc -w --preserveWatchOutput",
-    "watch-browser:spago": "npx spago bundle-app --main Test.ClientMain --to public/index.js --watch",
-    "watch-browser": "npm-run-all -p watch-browser:*",
     "bundle": "npx spago run --main Test.Main ",
     "precommit": "npx purs-tidy format-in-place src/**/*.purs test/**/*.purs && tsc",
     "prepare": "husky install"
   },
   "devDependencies": {
+    "bower": "^1.8.14",
+    "esbuild": "^0.15.8",
     "husky": "^8.0.1",
     "pulp": "^16.0.2",
     "purescript": "^0.15.4",
     "purs": "^0.3.0",
-    "purs-tidy": "^0.9.1",
+    "purs-tidy": "^0.9.2",
     "spago": "^0.20.9",
-    "esbuild": "^0.15.7",
-    "npm-run-all": "^4.1.5",
     "typescript": "^4.8.3"
   },
   "author": "yukikurage",
