--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "test"
   },
   "scripts": {
-    "bundle": "npx spago run --main Test.Main ",
+    "bundle": "npx spago bundle-app -m Test.Main -t public/index.js",
     "precommit": "npx purs-tidy format-in-place src/**/*.purs test/**/*.purs && tsc",
     "prepare": "husky install"
   },
@@ -21,5 +21,8 @@
   "author": "yukikurage",
   "license": "MIT",
   "description": "",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "http-server": "^14.1.1"
+  }
 }
